--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,9 +15,10 @@
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.0",
     "mongoose": "^5.11.17",
-    "nodemon": "^2.0.7",
     "subscriptions-transport-ws": "^0.9.18"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "description": ""
 }
